[workspace]
resolver = "2"

members = [
    # Problems
    "problems/intro/combinations",
    "problems/intro/conway",
    "problems/intro/min-queue",
    "problems/std-collections/prefix",
    "problems/std-collections/lru-cache",
    "problems/std-collections/comm",
    "problems/traits/trust",
    "problems/traits/mpsc",
    "problems/traits/flatmap",
    "problems/traits/itertools",
    "problems/borrowing/pstack"

]
